tests/should_fail/syntax_empty_tuple.nv
module main

// SHOULD FAIL: empty tuple — tuples must contain at least one element
// The parser errors on ()
let t = ()
println(t)
